Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28806

Can not fallback to a Localized font family from fontconfig.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0 Beta 1
    • 5.0.0
    • GUI: Font handling
    • None
    • 9f7bc42b7d6466b8422c7cc3900a7eb3bfa60bf9

    Description

      In qt 5.0, If a font had multi family names(localzied and non-localized), when populate font database via fontconfig, The FcPatternGetString(FC_FAMILY) will get a localized font family name.

      But, in fallbacksForFamily, it will get a non-localized font family, So it always can not find the proper font to fallback.(Since it use Localized font family in fontdatabase);

      This cause a very funny issue, Qt can not fallback to proper font for current locale if the font had a localized font family name, but load other fonts which can support this charset.

      Here is a patch to fix it.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ritt.ks Konstantin Ritt
              cjacker Cjacker Huang
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes