src/platformsupport/fontdatabases/fontconfig/qfontconfigdatabase.cpp
@@ -370,6 +370,8 @@ static bool isSymbolFont(FontFile *fontFile)
     return hasSymbolMap;
 }
 
+Q_GUI_EXPORT void qt_registerAliasToFontFamily(const QString &familyName, const QString &alias);
+
 void QFontconfigDatabase::populateFontDatabase()
 {
     FcFontSet  *fonts;
@@ -511,6 +513,9 @@ void QFontconfigDatabase::populateFontDatabase()
         QString styleName = style_value ? QString::fromUtf8((const char *) style_value) : QString();
         QPlatformFontDatabase::registerFont(familyName,styleName,QLatin1String((const char *)foundry_value),weight,style,stretch,antialias,scalable,pixel_size,fixedPitch,writingSystems,fontFile);
 //        qDebug() << familyName << (const char *)foundry_value << weight << style << &writingSystems << scalable << true << pixel_size;
+
+        for (int k = 1; FcPatternGetString(fonts->fonts[i], FC_FAMILY, k, &value) == FcResultMatch; ++k)
+            qt_registerAliasToFontFamily(familyName, QString::fromUtf8((const char *)value));
     }
 
     FcFontSetDestroy (fonts);
